--- a/hackathons-wiki.html
+++ b/hackathons-wiki.html
@@ -1593,28 +1593,48 @@ document.addEventListener('visibilitychange', function() {
         return;
       }
 
-      const { userData } = data;
-      let html = `<h3 style="color: green;">✅ ${data.message}</h3>`;
-      html += `<p><strong>Email:</strong> ${userData.email}</p>`;
-      html += `<p><strong>Submitted At:</strong> ${userData.timestamp}</p>`;
-      html += `<hr><h4>📋 Your Full Response:</h4><ul style="padding-left: 1rem;">`;
+      const { userData, discordLink, groupmeLink } = data;
+      let html = `<div style="border: 2px solid #4CAF50; border-radius: 10px; background-color: #f0fff0; padding: 20px;">`;
+      html += `<h3 style="color: #2e7d32;">✅ ${data.message}</h3>`;
+      html += `<p style="font-weight:bold; color: #0047AB;"><span style="background:#e0f7fa;padding:4px 8px;border-radius:4px;">Email:</span> ${userData.email}</p>`;
+      html += `<p><span style="background:#eeeeee;padding:4px 8px;border-radius:4px;">Submitted At:</span> ${userData.timestamp}</p>`;
+      html += `<hr><h4>📋 Your Full Response:</h4>`;
+      html += `<div style="padding-left: 1rem;"><ul style="list-style-type: none; padding-left: 0;">`;
 
       for (const [label, value] of Object.entries(userData.additionalFields)) {
-        html += `<li><strong>${label}:</strong> ${value}</li>`;
+        html += `<li style="margin-bottom: 8px;">
+                  <span style="font-weight:bold; color: #333;">${label}:</span>
+                  <span style="color: #444; background: #f9f9f9; padding: 4px 8px; border-radius: 5px;">${value}</span>
+                 </li>`;
       }
 
-      html += `</ul>`;
+      html += `</ul></div>`;
 
-      if (data.discordLink || data.groupmeLink) {
-        html += `<hr><h4>🎯 Join Our Communities:</h4><ul style="padding-left: 1rem;">`;
-        if (data.discordLink) {
-          html += `<li><a href="${data.discordLink}" target="_blank">📎 Discord Invite Link</a></li>`;
+      // Community Links
+      if (discordLink || groupmeLink) {
+        html += `<hr><h4>🎯 Join Our Communities:</h4><div style="margin-top: 10px; display: flex; gap: 10px; flex-wrap: wrap;">`;
+
+        if (discordLink) {
+          html += `<a href="${discordLink}" target="_blank" style="background:#5865F2;color:white;padding:10px 15px;border-radius:6px;text-decoration:none;">Join Discord Server</a>`;
         }
-        if (data.groupmeLink) {
-          html += `<li><a href="${data.groupmeLink}" target="_blank">📎 GroupMe Invite Link</a></li>`;
+
+        if (groupmeLink) {
+          html += `<a href="${groupmeLink}" target="_blank" style="background:#00AFF0;color:white;padding:10px 15px;border-radius:6px;text-decoration:none;">Join GroupMe Chat</a>`;
         }
-        html += `</ul>`;
+
+        html += `</div>`;
       }
+
+      // "I am attending" section
+      html += `<hr><div style="margin-top: 20px;">`;
+      html += `<a href="https://305hackfall2025iamattending.vercel.app/" target="_blank" style="background:#0047AB;color:white;padding:10px 15px;border-radius:6px;text-decoration:none;">🎉 I'm Attending 305 Hackathon</a>`;
+      html += `<p style="margin-top: 10px; font-size: 0.95rem; background:#f5f5f5; padding:10px; border-radius:8px;">
+        🎉 I’m attending 305 Hackathon: Fall Edition, an official MLH 2026 Season event!<br>
+        👉 Register now → <a href="https://305HackFall2025.vercel.app" target="_blank">305HackFall2025.vercel.app</a><br>
+        📩 LinkedIn RSVP → <a href="https://305hackfall2025-linkedin.vercel.app" target="_blank">305hackfall2025-linkedin.vercel.app</a><br>
+        🌍 Worldwide — open to <strong>ALL majors</strong>, <strong>ALL universities</strong>, and high school students <strong>(16+)</strong>!
+      </p>`;
+      html += `</div></div>`;
 
       resultsDiv.innerHTML = html;
     } catch (err) {
@@ -1622,6 +1642,7 @@ document.addEventListener('visibilitychange', function() {
     }
   });
 </script>
+
 
 
 
