updates working with buttoms

--- a/hackathons-wiki.html
+++ b/hackathons-wiki.html
@@ -1888,7 +1888,7 @@ function generateSimple305Info(hack305Data) {
             <div style="display: flex; align-items: center; gap: 1rem;">
                 <div style="font-size: 2rem;">${isRegistered ? '✅' : '🚀'}</div>
                 <div>
-                    <h4 style="color: var(--text-primary); margin: 0;">🚀 305 HACK FALL 2025</h4>
+                    <h4 style="color: var(--text-primary); margin: 0;"> 305 HACK FALL 2025</h4>
                     <p style="color: ${statusColor}; margin: 0; font-weight: 600;">
                         ${isRegistered ? 'You are registered!' : 'Registration Open - Join Now!'}
                     </p>
@@ -1919,10 +1919,10 @@ function generateSimple305Info(hack305Data) {
                     🎉 <strong>${isRegistered ? "Share that you're attending!" : "Share and invite others!"}</strong>
                 </p>
                 <a href="https://305hackfall2025iamattending.vercel.app/" target="_blank" class="community-btn" style="background: linear-gradient(45deg, var(--hacker-purple), var(--neon-pink));">
-                    🎉 ${isRegistered ? "I'm Attending – Share It!" : "Share 305 Hack!"}
+                    🎉 ${isRegistered ? "I'm Attending – Share It!" : "Share 305 Hack I'm Attending!"}
                 </a>
                 <a href="https://305hackfall2025-linkedin.vercel.app" target="_blank" class="community-btn" style="background: #0077B5;">
-                    💼 Share on LinkedIn
+                    💼 Repost & Share with your thoughts 305 hack fall 2025 on LinkedIn
                 </a>
             </div>
         </div>
